syntax = "proto3";
package auth; //как будет называться пакет
option go_package = "./internal/pkg/auth/delivery/grpc/gen/;gen"; //куда он сгенерится

//protoc --go_out=./gen --go-grpc_out=./gen --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
// rpc Logout(SignInRequest) returns (SignInResponse) {} // todo а нужен?

//описание сервиса
service Auth {
  rpc SignUp(SignUpRequest) returns (SignUpInResponse) {}
  rpc Login(SignInRequest) returns (SignUpInResponse) {}
  rpc CheckAuth(CheckAuthRequst) returns (CheckAuthResponse) {}
}

//описание сообщения
message SignUpRequest {
  string Email = 1;
  string Phone = 2;
  string Password = 3;
}

message SignInRequest {
  string Email = 1;
  string Password = 2;
}

message CheckAuthRequst {
  string Id = 1;
}

message CheckAuthResponse {
  bool Authorized = 1;
}

message SignUpInResponse {
  string Token = 1;
  string Exp = 2;
}

message ProfileInfoResponse {
  string Id = 1;
  string Email = 2;
  string PasswordHash = 3;
  int64 LevelUpdate = 4;
}

